Author = "Rio Harper"
License = "MIT"
Home-page = "https://github.com/rioharper/VocalForge"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "VocalForge"
version = "0.1.1"

authors = [
  {email="rio@rioharper.com" },
]
description = "Your one-stop solution for voice dataset creation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 11.3"
]


dependencies = [
    'joblib',
    'natsort',
    'numpy',
    'pydub',
    'pandas',
    'regex',
    'scipy',
    'tqdm',
    'hydra-core'
]

[tool.setuptools]
package-dir = {"" = "VocalForge"}

[project.optional-dependencies]
audio = [
        'deepfilternet',
        'yt_dlp'
        ]

text = [
        'ctc_segmentation',
        'nemo_toolkit[all]',
        'num2words',
        'openai_whisper',
        'whisper',
]
